tests/e2e/gateway-bundles/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg-bundle-test
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      affinity: {}
      containers:
      - envFrom:
        - configMapRef:
            name: ssg-bundle-test
        - secretRef:
            name: ssg-bundle-test
        image: docker.io/caapim/gateway:11.2.1
        imagePullPolicy: IfNotPresent
        lifecycle: {}
        livenessProbe:
          exec:
            command:
            - /bin/bash
            - /opt/docker/rc.d/diagnostic/health_check.sh
          failureThreshold: 25
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - /opt/docker/rc.d/diagnostic/health_check.sh
          failureThreshold: 25
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: gateway
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        - containerPort: 9443
          name: management
          protocol: TCP
        resources: {}
        securityContext: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/license/license.xml
          name: gateway-license
          subPath: license.xml
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/graphman/2
          name: graphman-bootstrap-bundle
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/graphman/3
          name: graphman-bootstrap-secret-bundle
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/restman-bootstrap-bundle
          name: restman-bootstrap-bundle
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/restman-bootstrap-secret-bundle
          name: restman-bootstrap-secret-bundle
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/ssg-bundle-test-listen-port-bundle
          name: ssg-bundle-test-listen-port-bundle
        - mountPath: /opt/SecureSpan/Gateway/node/default/etc/bootstrap/bundle/graphman/0
          name: ssg-bundle-test-repository-bundle-dest
        - mountPath: /graphman/config.json
          name: ssg-bundle-test-repository-init-config
          subPath: config.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gateway-license
        secret:
          defaultMode: 493
          items:
          - key: license.xml
            path: license.xml
          optional: false
          secretName: gateway-license
      - configMap:
          defaultMode: 444
          name: graphman-bootstrap-bundle
          optional: false
        name: graphman-bootstrap-bundle
      - name: graphman-bootstrap-secret-bundle
        secret:
          defaultMode: 444
          secretName: graphman-bootstrap-secret-bundle
      - configMap:
          defaultMode: 444
          name: restman-bootstrap-bundle
          optional: false
        name: restman-bootstrap-bundle
      - name: restman-bootstrap-secret-bundle
        secret:
          defaultMode: 444
          secretName: restman-bootstrap-secret-bundle
      - configMap:
          defaultMode: 493
          name: ssg-bundle-test-listen-port-bundle
          optional: false
        name: ssg-bundle-test-listen-port-bundle
      - emptyDir: {}
        name: ssg-bundle-test-repository-bundle-dest
      - configMap:
          defaultMode: 493
          name: ssg-bundle-test-repository-init-config
          optional: false
        name: ssg-bundle-test-repository-init-config
